@@ -13,8 +13,10 @@ Installation:
 * Put the Likeback directory in a publicly accessible location.
 * Restrict access to admin/ by HTTP authentication.
 * Copy db.conf.template.php to db.conf.php and modify it to your liking.
-* Run admin/install.php (or when upgrading: run admin/upgrade[your old version]to[your new version].php, i.e. upgrade11to12.php.
+* Run admin/install.php.
 * Add a crontab entry to run cron/sendReminders.php weekly (see cron/crontab).
 * Test your installation.
+
+To upgrade from 1.1, run admin/upgrade11to12.php, then add a crontab entry as above.
 
 Please report any bugs to sjors@kmess.org.
